productsvc/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productsvc
  labels:
    app: productsvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productsvc
  template:
    metadata:
      labels:
        app: productsvc
    spec:
      containers:
        - name: productsvc
          image: cadbcraftsman/productsvc:1.0.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 8080
