productsvc/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: productsvc
  labels:
    app: productsvc
spec:
  type: NodePort
  selector:
    app: productsvc
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
